<resources>
    <string name="app_name">PiAF</string>
    <string name="button_play">Faire le quizz!</string>
    <string name="button_first">Démarrer!</string>
    <string name="question_qcm">Qui est cet oiseau?</string>
    <string name="button_replay">Rejouer le son.</string>
    <string name="button_next">Question suivante.</string>
    <string name="button_end">Terminer le quizz.</string>
    <string name="menu_item_settings">Réglages</string>
    <string name="menu_item_credits">Crédits</string>
    <string name="menu_item_licence">Licence</string>
    <string name="menu_item_reset">Réinitialiser</string>
    <string name="menu_item_about">A propos</string>
    <string name="menu_item_privacy">Confidentialité</string>
    <string name="menu_item_catalog">Catalogue d\'oiseaux</string>
    <string name="game_preferences_header">Jeu</string>
    <string name="icon_mystery_bird">Oiseau mystère</string>
    <string name="quizz_duration">Combien de temps avez-vous?</string>
    <string name="quizz_choices">Propositions pour le QCM?</string>
    <string name="qcm_mode">Jouer en mode QCM?</string>
    <string name="qcm_mode_on">QCM activé</string>
    <string name="qcm_mode_off">Mode libre activé.</string>
    <string name="level_information">Niveau </string>
    <string name="target_information_1">Plus que </string>
    <string name="target_information_2"> bonnes réponses avant validation.</string>
    <string name="target_close">Tout près de la validation.</string>
    <string name="target_mid">Proche de la validation.</string>
    <string name="target_far">Encore loin de la validation.</string>
    <string name="target_reached">Vous avez fini le jeu!</string>
    <string name="level_validation">Bravo! Vous avez validé le niveau</string>
    <string name="game_won">Victoire, vous avez achevé le jeu!</string>
    <string name="free_question">Qui suis-je?</string>
    <string name="free_answer">Mon nom:</string>
    <string name="button_show">Voir la réponse.</string>
    <string name="answer_correct">Je le savais!</string>
    <string name="answer_incorrect">Je ne le savais pas.</string>
    <string name="normal_score_text">Votre score:</string>
    <string name="great_score_text">Excellent! Vous avez </string>
    <string name="good_score_text">Bien joué! Vous avez </string>
    <string name="sound_credit">Credit sonore:</string>
    <string name="dialog_reset_game">Réinitialiser le jeu?</string>
    <string name="dialog_warning">Vous n\'avez pas choisi de réponse.</string>
    <string name="confirm">Confirmer</string>
    <string name="all_right">Entendu</string>
    <string name="not_again">Ne plus afficher</string>
    <string name="cancel">Annuler</string>
    <string name="warning">Avertissement pour le QCM?</string>
    <string name="warning_on">Afficher</string>
    <string name="warning_off">Ne pas afficher</string>
    <string name="hint">Proposer des conseils?</string>
    <string name="hint_label">Astuce:</string>
    <string name="warning_label">Avertissement:</string>
</resources>