<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_about"
        android:title="@string/menu_item_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_settings"
        android:title="@string/menu_item_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_credits"
        android:title="@string/menu_item_credits"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_licence"
        android:title="@string/menu_item_licence"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_reset"
        android:title="@string/menu_item_reset"
        app:showAsAction="never" />
</menu>